[tool.poetry]
name = "Stanford-CS-168_Modern_Algorithmic_Toolbox"
version = "0.1.0"
description = "Modern Algorithmic Toolbox class assignments"
authors = ["Nathan Glenn <garfieldnate@gmail.com>"]
keywords = [
    "Stanford", "CS 168", "algorithms", "class", "computer science"]

[tool.poetry.dependencies]
python = ">=3.9, <3.10" # 3.10 cap required by numpy
jupyter = "^1.0.0"
matplotlib = "^3.4.1"
jupyterlab = "^3.0.14"
ipympl = "^0.7.0"
tqdm = "^4.60.0"
blackcellmagic = "^0.0.2"
pandas = "^1.2.4"
scipy = "^1.6.3"
jupyter-bokeh = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
pytest-cov = "^2.10.1"
flake8 = "^3.8.4"
mypy = "^0.790"
black = "^20.8b1"
isort = "^5.6.4"
pre-commit = "^2.7.1"

[build-system]
# setuptools required because of bug in distutils: https://github.com/python-poetry/poetry/issues/3153
requires = ["setuptools","poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.poetry.scripts]
# test = "pre-commit run --all-files"

[tool.isort]
# black-compatible settings
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.coverage.run]
source = ["cs168"]

[tool.coverage.report]
# TODO: require certain level of test coverage
# fail_under = 100
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:"
]
